# Cross-EfficientNet-ViT

./: .gitignore  Celeb-real.txt  Celeb-synthesis.txt  README.md  YouTube-real.txt  audit_preprocessing.py  balanced_dataset.py  config.py  deepfakes_dataset.py  evaluate.py  main.py  predict.py  pyproject.toml  test.py  train.py  utils.py  video_dir_check.py
configs/: architecture.yaml
preprocessing/: detect_faces.py  extract_crops.py  face_detect_debug.py  face_detector.py  utils.py
